--- a/Gsap Landing Pages/Landing-Page-001/index.html
+++ b/Gsap Landing Pages/Landing-Page-001/index.html
@@ -26,7 +26,7 @@
                     <div class="logo">
                         <i class="ri-vuejs-line"></i>
                     </div>
-                    <div class="pagebar">
+                    <div class="pagebar"></div>
                         <div class="page-box"></div>
                         <div class="page-box"></div>
                         <div class="page-box"></div>
