--- a/Gsap Landing Pages/Landing-Page-001/index.html
+++ b/Gsap Landing Pages/Landing-Page-001/index.html
@@ -8,11 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libertinus+Serif:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-        rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libertinus+Serif:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
 
     <link rel="stylesheet" href="style.css">
@@ -26,7 +24,7 @@
                     <div class="logo">
                         <i class="ri-vuejs-line"></i>
                     </div>
-                    <div class="pagebar"></div>
+                    <div class="pagebar">
                         <div class="page-box"></div>
                         <div class="page-box"></div>
                         <div class="page-box"></div>
@@ -48,31 +46,21 @@
                         <h4>Voilet</h4>
                     </div>
                     <div class="paragraph">
-                        <div class="paragraph-div">
-                            <p>This aqua-inspired landing page uses GSAP to create smooth, flowing animations that mimic
-                                the
-                                motion of water..</p>
-                        </div>
-                        <div class="paragraph-div">
-                            <p>This Sahara-themed landing page captures the essence of desert minimalism using GSAP
-                                animations. With warm tones, smooth transitions, and wind-like motion effects, it
-                                delivers a
-                                serene and immersive user experience.</p>
-                        </div>
-                        <div class="paragraph-div">
-                            <p>This violet-themed landing page blends elegance with interactivity through GSAP
-                                animations.
-                                Featuring smooth transitions, deep purple hues, and a soft glow aesthetic, it creates a
-                                calm
-                                and futuristic vibe.</p>
-                        </div>
-
-
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et autem nulla dolores perferendis
+                            voluptas animi voluptates minima cum deleniti aliquid eius quos, natus mollitia? Cum,
+                            provident nobis? Optio, voluptas id!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et autem nulla dolores perferendis
+                            voluptas animi voluptates minima cum deleniti aliquid eius quos, natus mollitia? Cum,
+                            provident nobis? Optio, voluptas id!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et autem nulla dolores perferendis
+                            voluptas animi voluptates minima cum deleniti aliquid eius quos, natus mollitia? Cum,
+                            provident nobis? Optio, voluptas id!</p>
 
 
                     </div>
                     <div class="imagecontainer">
-                        <img src="./assets/images/one.jpg" alt="Image One">
+                        <img src="./assets/images/one.jpg"
+                            alt="Image One">
                     </div>
                     <div class="imagecontainer">
                         <img src="./assets/images/two.jpeg" alt="Image Two">
